# app_flutter_topicos

./: .gitignore  COMANDOS_PRUEBA.md  COMPILAR_NDK.bat  COMPILAR_NDK.ps1  COMPILAR_WHISPER_NDK.md  CONFIGURAR_OPENAI_WHISPER.md  DIAGNOSTICO_MODELO.md  ESTRUCTURA.md  INDICE_ARCHIVOS.md  INTEGRACION_WHISPER.md  PRUEBAS_MODEL_PICKER.md  README.md  SETUP.md  compilar_whisper.ps1  compilar_whisper_ninja.ps1  compilar_whisper_simple.ps1  pubspec.yaml
.claude/: settings.local.json
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
android/app/src/main/kotlin/com/example/flutter_app/: LLMModel.kt  MainActivity.kt  WhisperManager.kt
lib/: main.dart
lib/constants/: gbnf_grammar.dart  system_prompt.dart
lib/react/agents/: api_agent.dart  dispatch_agent.dart  llm_agent.dart
lib/react/containers/: command_container.dart
lib/react/entities/: api_response.dart  command_intent.dart  command_intent_list.dart
lib/react/types/: command_request.dart
lib/screens/: home_screen.dart  splash_screen.dart
lib/services/: audio_service.dart  auth_service.dart  env_config.dart  model_status_service.dart  model_validator_service.dart  openai_whisper_service.dart  whisper_service.dart
lib/widgets/: inference_loading_dialog.dart  model_loader_widget.dart  model_status_indicator.dart  openai_config_widget.dart  whisper_loader_widget.dart  whisper_status_indicator.dart
